2004-07-30  Richard Hult  <richard@imendio.com>

	* configure.in: Update requirements.

	* libegg/recent-files: Sync with latest libegg.

	* libplanner/mrp-file-module.c: (mrp_file_module_load_all):
	* src/planner-plugin-loader.c: (mpl_load_dir):
	* src/planner-view-loader.c: (mvl_load_dir): Don't hardcode .so
	suffix.

	* src/Makefile.am: Split out shared code from task/gantt views.

2004-07-27  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c:
	(task_dialog_resource_units_cell_edited): Merge from 0.12 branch.

2004-07-19  Richard Hult  <richard@imendio.com>

	* configure.in: Bump.

2004-07-08  Anders Carlsson  <andersca@gnome.org>

	* src/planner-window.c: (window_open_cb), (window_do_save_as):
	We don't need to check if we're opening a directory.

2004-07-08  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* data/glade/html-output.glade:
	* src/planner-window.c: (window_open_cb), (window_do_save_as):
	Use GtkFileChooser.
	
2004-07-08  Richard Hult  <richard@imendio.com>

	* Release 0.12.

	* configure.in: Bump version.
	* examples/sample-1.planner: Fix the sampe name.
	* src/planner-window.c: (window_update_title): Brand a bit.

2004-07-07  Richard Hult  <richard@imendio.com>

	* planner.spec.in: Put the sql storage in the right
	package. Redirect mime updating to /dev/null.

	* docs/user-guide/C/planner.xml: Fix up.

	* src/planner-window.c: Brand a bit.
	
2004-07-05  Richard Hult  <richard@imendio.com>

	* configure.in: Bump.

	* src/planner-resource-view.c:
	(resource_cmd_edit_custom_property): Remove string.

	* src/planner-task-dialog.c: (task_cmd_edit_sched): Change string
	that was completely wrong. Sorry translators, but this is better
	to have fuzzy than the wrong meaning.

	* src/planner-task-tree.c: (task_cmd_edit_custom_property): Remove
	string.

2004-07-02  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-row.c: (ttable_row_realize),
	(ttable_row_draw_resource_ival): Draw vertical separators between