@@ -167,14 +167,6 @@ fi
 
 
 dnl  ------------------
-dnl | Time table       |---------------------------------------
-dnl  ------------------
-AC_ARG_ENABLE(timetable, [  --enable-timetable      enable time table view [default=no]], enable_timetable="$enableval", enable_timetable=yes)
-AM_CONDITIONAL(BUILD_TIMETABLE, test x$enable_timetable != xno)
-dnl -----------------------------------------------------------
-
-
-dnl  ------------------
 dnl | Language Support |---------------------------------------
 dnl  ------------------
 GETTEXT_PACKAGE=planner
@@ -296,7 +288,6 @@ echo "Python bindings     : $have_python"
 echo "Python plugin       : $enable_python_plugin"
 echo "Dotnet bindings     : $have_dotnet"
 echo "Database/GDA support: $use_gda"
-echo "Resource usage view : $enable_timetable"
 echo
 
 
