@@ -1,5 +1,11 @@
 2004-07-30  Richard Hult  <richard@imendio.com>
 
+	* configure.in:
+	* data/ui/Makefile.am:
+	* src/Makefile.am: Don't make resource usage view optional.
+
+2004-07-30  Richard Hult  <richard@imendio.com>
+
 	* configure.in: Update requirements.
 
 	* libegg/recent-files: Sync with latest libegg.
